--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -605,64 +605,36 @@ body {
     line-height: 35px;
     color: #6c6c6c;
     margin-right: 10px;
-    transition: color 0.2s ease-in-out, border-bottom 0.2s ease-in-out;
-    position: relative;
-}
-
-.item-filter__text::after {
-    content: "";
-    position: absolute;
-    bottom: -5px;
-    left: 0;
-    width: 100%;
-    border-bottom: 1px solid #f4f4f4;
-    opacity: 0;
-    transition: opacity 0.2s ease-in-out, bottom 0.2s ease-in-out;
 }
 
 .item-filter__count {
     font-weight: 400;
     font-size: 16px;
-    color: #f4f4f4;
+    color: #c9c9c9;
     padding: 6px 10px;
     background-color: #6c6c6c;
     border-radius: 10px;
-    transition: background-color 0.2s ease-in-out;
 }
 
-.item-filter__text_active {
+.item-filter.active .item-filter__text,
+.item-filter:hover .item-filter__text {
     color: #f4f4f4;
     border-bottom: 1px solid #f4f4f4;
     font-weight: 400;
     font-size: 20px;
     line-height: 35px;
     margin-right: 10px;
-    transition: color 0.2s ease-in-out, border-bottom 0.2s ease-in-out;
-    position: relative;
+    transform: translateY(1px);
 }
 
-.item-filter__count_active {
+.item-filter.active .item-filter__count,
+.item-filter:hover .item-filter__count {
     background-color: #f4f4f4;
     font-weight: 400;
     font-size: 16px;
     color: #6c6c6c;
     padding: 6px 10px;
     border-radius: 10px;
-    transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-}
-
-.item-filter:hover .item-filter__text::after {
-    opacity: 1;
-    bottom: 0px;
-}
-
-.item-filter:hover .item-filter__text {
-    color: #f4f4f4;
-}
-
-.item-filter:hover .item-filter__count {
-    background-color: #f4f4f4;
-    color: #6c6c6c;
 }
 
 @media (max-width: 530px) {
